--- a/css/settings.css
+++ b/css/settings.css
@@ -10,6 +10,10 @@ body {
     z-index:-1
 }
 
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
 #novelDiv {
     width: 800px;
     height: 600px;
@@ -18,6 +22,23 @@ body {
     margin-right: auto;
     position: relative;
     text-align: center;
+    opacity:0;
+
+    -webkit-animation: fadeIn ease-in 1;
+    -moz-animation:fadeIn ease-in 1;
+    animation:fadeIn ease-in 1;
+
+    -webkit-animation-fill-mode:forwards;
+    -moz-animation-fill-mode:forwards;
+    animation-fill-mode:forwards;
+
+    -webkit-animation-duration:1s;
+    -moz-animation-duration:1s;
+    animation-duration:1s;
+
+    -webkit-animation-delay: 1.2s;
+    -moz-animation-delay:1.2s;
+    animation-delay: 0.7s;
 }
 
 #dialogDiv {
