--- a/css/settings.css
+++ b/css/settings.css
@@ -1,6 +1,20 @@
 body {
     background-color: rgba(27, 27, 27, 1);
     text-align: center;
+    height:100%;
+    width:100%;
+    margin:0;
+    padding:0;
+}
+
+.contain {
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+    content-align: center;
+    background-image: url("../img/page/bg.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .bg {
@@ -43,6 +57,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     position: relative;
+    top: 5%;
     text-align: center;
     opacity:0;
 
@@ -58,9 +73,9 @@ body {
     -moz-animation-duration:1s;
     animation-duration:1s;
 
-    -webkit-animation-delay: 1.2s;
-    -moz-animation-delay:1.2s;
-    animation-delay: 0.7s;
+    -webkit-animation-delay: 2.2s;
+    -moz-animation-delay:2.2s;
+    animation-delay: 2.0s;
 }
 
 #dialogDiv {
