--- a/css/settings.css
+++ b/css/settings.css
@@ -25,29 +25,57 @@ body {
 }
 
 @-webkit-keyframes fadeIn {
-    from { opacity:0; }
-    to { opacity:1; }
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
 }
+
 @-moz-keyframes fadeIn {
-    from { opacity:0; }
-    to { opacity:1; }
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
 }
+
 @keyframes fadeIn {
-    from { opacity:0; }
-    to { opacity:1; }
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
 }
 
 @-webkit-keyframes fadeOut {
-    from { opacity:1; }
-    to { opacity:0; }
+    from {
+        opacity:1;
+    }
+    to {
+        opacity:0;
+    }
 }
+
 @-moz-keyframes fadeOut {
-    from { opacity:1; }
-    to { opacity:0; }
+    from {
+        opacity:1;
+    }
+    to {
+        opacity:0;
+    }
 }
+
 @keyframes fadeOut {
-    from { opacity:1; }
-    to { opacity:0; }
+    from {
+        opacity:1;
+    }
+    to {
+        opacity:0;
+    }
 }
 
 #novelDiv {
